ajout des alt aux images et du meta description

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Un homme lutte pour faire passer un message écologique
+    en faisant pousser du riz sur sa tête">
     <title>Head rice</title>
 </head>
 
@@ -26,25 +28,23 @@
             la nature humaine et de la symbiose avec notre environnement. À travers ce geste à la fois simple et
             radical, cet homme nous invite à repenser notre relation avec la nature et à envisager de nouvelles façons
             d'intégrer les pratiques agricoles dans notre quotidien. </p>
-        <img src="hommeriz.png">
+        <img src="hommeriz.png" alt="homme avec une plantation de riz sur la tête">
 
         <h1> La vie du riz </h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi doloribus vitae quae, aperiam iusto
             quaerat commodi voluptatem repudiandae quia, officiis pariatur, eaque quasi perspiciatis possimus laudantium
             dignissimos! Doloremque, aperiam in.</p>
-        <img src="lavieduriz.png">
+        <img src="lavieduriz.png" alt="illustration de riz avec marque Rice is life">
 
         <h1> Rendement </h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad dolor fugiat nam fugit, minus maxime molestias
             facere ex, mollitia assumenda laborum alias cum ipsa deleniti quaerat voluptates et reprehenderit ut?</p>
-        <img src="rendement.png">
+        <img src="rendement.png" alt="graphique complexe de rendement de riz">
     </div>
 
     <div class="footer">
         <p> Aucun droit réservé // Head Rice Corp </p>
     </div>
-
-
 
 
 
