ajout des balises html 5

--- a/index.html
+++ b/index.html
@@ -10,41 +10,53 @@
 </head>
 
 <body>
-    <div class="header">
-        <div class="menu">
+    <header>
+        <nav>
             <ul>
                 <li>Introduction</li>
                 <li>La vie du riz</li>
                 <li>Rendement</li>
             </ul>
-        </div>
-    </div>
-    <div class="content">
-        <h1> Introduction </h1>
-        <p> Dans un monde où l'innovation et l'originalité ne cessent de surprendre, l'histoire de cet homme se
-            distingue par son audace et son ingéniosité singulières. En défiant les conventions et les attentes
-            sociétales, il a choisi un chemin véritablement unique : cultiver du riz sur sa propre tête. Cette aventure
-            insolite n'est pas seulement une performance d'excentricité, mais une véritable exploration des limites de
-            la nature humaine et de la symbiose avec notre environnement. À travers ce geste à la fois simple et
-            radical, cet homme nous invite à repenser notre relation avec la nature et à envisager de nouvelles façons
-            d'intégrer les pratiques agricoles dans notre quotidien. </p>
-        <img src="hommeriz.png" alt="homme avec une plantation de riz sur la tête">
+        </nav>
+    </header>
+    <main>
+        <article>
+            <h1> Introduction </h1>
+            <p> Dans un monde où l'innovation et l'originalité ne cessent de surprendre, l'histoire de cet homme se
+                distingue par son audace et son ingéniosité singulières. En défiant les conventions et les attentes
+                sociétales, il a choisi un chemin véritablement unique : cultiver du riz sur sa propre tête. Cette
+                aventure
+                insolite n'est pas seulement une performance d'excentricité, mais une véritable exploration des limites
+                de
+                la nature humaine et de la symbiose avec notre environnement. À travers ce geste à la fois simple et
+                radical, cet homme nous invite à repenser notre relation avec la nature et à envisager de nouvelles
+                façons
+                d'intégrer les pratiques agricoles dans notre quotidien. </p>
+            <img src="hommeriz.png" alt="homme avec une plantation de riz sur la tête">
+        </article>
 
-        <h1> La vie du riz </h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi doloribus vitae quae, aperiam iusto
-            quaerat commodi voluptatem repudiandae quia, officiis pariatur, eaque quasi perspiciatis possimus laudantium
-            dignissimos! Doloremque, aperiam in.</p>
-        <img src="lavieduriz.png" alt="illustration de riz avec marque Rice is life">
+        <article>
+            <h1> La vie du riz </h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi doloribus vitae quae, aperiam iusto
+                quaerat commodi voluptatem repudiandae quia, officiis pariatur, eaque quasi perspiciatis possimus
+                laudantium
+                dignissimos! Doloremque, aperiam in.</p>
+            <img src="lavieduriz.png" alt="illustration de riz avec marque Rice is life">
+        </article>
 
-        <h1> Rendement </h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad dolor fugiat nam fugit, minus maxime molestias
-            facere ex, mollitia assumenda laborum alias cum ipsa deleniti quaerat voluptates et reprehenderit ut?</p>
-        <img src="rendement.png" alt="graphique complexe de rendement de riz">
-    </div>
+        <article>
+            <h1> Rendement </h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad dolor fugiat nam fugit, minus maxime
+                molestias
+                facere ex, mollitia assumenda laborum alias cum ipsa deleniti quaerat voluptates et reprehenderit ut?
+            </p>
+            <img src="rendement.png" alt="graphique complexe de rendement de riz">
+        </article>
+    </main>
 
-    <div class="footer">
+    <footer>
         <p> Aucun droit réservé // Head Rice Corp </p>
-    </div>
+    </footer>
 
 
 
